--- a/html/douban.html
+++ b/html/douban.html
@@ -117,5 +117,17 @@
             </div>
         </div>
     </div>
+    <div class="douban-section-news">
+        <div class="wrapper-section">
+            <div class="douban-section-side douban-section-news-side">
+                <div class="douban-section-news-side-">
+                    
+                </div>
+            </div>
+            <div class="douban-section-main">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
